fixed the scoreboard not showing on the tournament page

--- a/style.css
+++ b/style.css
@@ -511,3 +511,7 @@ main {
   border-top: 2px solid #ccc;
 
 }
+
+div:empty {
+  display: none;
+}
